--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@
 <div class="calories-info">
   <p class="bold sm-text">Amount per serving</p>
   <h1>Calories<span class="right">230</span></h1>
+  <div class="divider md"></div>
+  <div class="daily-value sm-text">
+    <p class="right bold no-divider">% Daily Value *</p>
+  </div>
+  <div class="divider"></div>
+  <p><span class="bold">Total Fat</span> 8g <span class="bold right">10%</span></p>
+  <div class="divider"></div>
+  <p class="indent no-divider">Saturated Fat 1g <span class="bold right">5%</span></p>
+  <div class="divider"></div>
+  <p class="indent no-divider"><i>Trans</i> Fat 0g</p>
+  <div class="divider"></div>
+ <p class=" indent no-divider"><span class="bold">Cholesterol</span> 0mg
+    <span class="bold right">0%</span>
+    <div class="divider"></div>
+    <p><span class="bold">Sodium</span> 160mg<span class="bold right">7%</span></p>
+    <p><span class="bold">Total Carbohydrate</span> 37mg <span class="right bold">13%</span></p>
+        
+    
 </div>
 </div>
   </body>
