--- a/index.html
+++ b/index.html
@@ -34,8 +34,22 @@
     <span class="bold right">0%</span>
     <div class="divider"></div>
     <p><span class="bold">Sodium</span> 160mg<span class="bold right">7%</span></p>
-    <p><span class="bold">Total Carbohydrate</span> 37mg <span class="right bold">13%</span></p>
+    <p><span class="bold">Total Carbohydrate</span> 37g <span class="right bold">13%</span></p>
+    <p class="indent no-divider">Dietary Fiber 4g</p>
+    <div class="divider"></div>   
+    <p class="indent no-divider">Total Sugars 12g</p>
         
+        <div class="divider"></div>
+        <p class="dbl-indent no-divider">Includes 10g Added Sugars <span class="right bold">20%</span>
+          <div class="divider"></div>
+          <p class="indent no-divider"><span class="bold">Protein</span> 3g</p>
+        <div class="divider lg"></div>
+        <p>Vitamin D 2mcg<span class="right">10%</span></p>
+        <p>Calcium 260mg<span class="right">20%</span></p>
+        <p>Iron 8mg <span class="right">45%</span></p>
+        <p class="no-divider">Potassium 235mg <span class="right">6%</span></p>
+        <div class="divider md"></div>
+        <p class="note">* The % Daily Value (DV) tells you how much a nutrient in a serving of food contributes to a daily diet. 2,000 calories a day is used for general nutrition advice.</p>
     
 </div>
 </div>
